[gd_scene load_steps=21 format=3 uid="uid://cixuio0nuxh2n"]

[ext_resource type="Script" uid="uid://mwhuo8er64iu" path="res://Scripts/enemy.gd" id="1_1f0kj"]
[ext_resource type="Texture2D" uid="uid://bnbtoov5h13m3" path="res://Animations/enemies/slime_purple.png" id="1_7k104"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gyqm"]
size = Vector2(14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f0kj"]
atlas = ExtResource("1_7k104")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_afpow"]
atlas = ExtResource("1_7k104")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_287tu"]
atlas = ExtResource("1_7k104")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
atlas = ExtResource("1_7k104")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
atlas = ExtResource("1_7k104")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
atlas = ExtResource("1_7k104")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg4t"]
atlas = ExtResource("1_7k104")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yqyl"]
atlas = ExtResource("1_7k104")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujgv"]
atlas = ExtResource("1_7k104")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8ge"]
atlas = ExtResource("1_7k104")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("1_7k104")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("1_7k104")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8e5"]
atlas = ExtResource("1_7k104")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_doop2"]
atlas = ExtResource("1_7k104")
region = Rect2(72, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_5hcft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f0kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afpow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_287tu")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yqyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar8e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doop2")
}],
"loop": false,
"name": &"take_damage",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afpow"]
size = Vector2(16, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_1f0kj"]
radius = 1.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_1f0kj")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_4gyqm")

[node name="Animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5hcft")
animation = &"attack"
autoplay = "move"

[node name="AttackZone" type="Area2D" parent="."]
collision_layer = 0

[node name="ColliderAttackZone" type="CollisionShape2D" parent="AttackZone"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_afpow")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Audio" type="AudioStreamPlayer2D" parent="."]

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DeathTimer" type="Timer" parent="."]

[node name="RightFootZone" type="Area2D" parent="."]
position = Vector2(9, 13)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightFootZone"]
shape = SubResource("CircleShape2D_1f0kj")

[node name="LeftFootZone" type="Area2D" parent="."]
position = Vector2(-9, 13)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftFootZone"]
shape = SubResource("CircleShape2D_1f0kj")

[node name="DetectionRayCast" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 5)
target_position = Vector2(90, 0)
collision_mask = 7
collide_with_areas = true

[connection signal="body_entered" from="AttackZone" to="." method="_on_attack_zone_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="body_exited" from="RightFootZone" to="." method="_on_foot_zone_body_exited"]
[connection signal="body_exited" from="LeftFootZone" to="." method="_on_foot_zone_body_exited"]
